[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flex-mls"
version = "0.1.2"
description = "Typed Python client library for the Spark RESO Web API used by Flexmls."
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Proprietary"
authors = [
  { name = "OpenAI Assistant" }
]
keywords = ["flexmls", "spark", "reso", "odata", "real-estate"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = [
  "requests>=2.31.0",
  "typing-extensions>=4.9.0"
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7.8",
  "black>=24.4.0",
  "build>=1.2.1",
  "coverage[toml]>=7.4.0",
  "flake8>=7.0.0",
  "isort>=5.13.2",
  "mypy>=1.10.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.25.0",
  "pymdown-extensions>=10.8.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "responses>=0.25.0",
  "twine>=5.1.0"
]
dotenv = [
  "python-dotenv>=1.0.1"
]

[project.urls]
Homepage = "https://github.com/theperrygroup/flex-mls"
Documentation = "https://theperrygroup.github.io/flex-mls/"
Repository = "https://github.com/theperrygroup/flex-mls"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["flex_mls*"]

[tool.setuptools.package-data]
flex_mls = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=flex_mls --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flex_mls"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true

[tool.bandit]
exclude_dirs = ["tests"]
